# UniPINN

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/poisson2d/: annulus.mesh  disk.mesh  lshaped.mesh
experiments/poisson1d/: analyze.py  batch.py  registry.py  vanilla_pinn.py
experiments/poisson2d/: registry.py  vanilla_pinn.py
scripts/: add_exp_group.py  generate_config.py
tests/: conftest.py  test_activations.py  test_benchmarks.py  test_benchmarks2d.py  test_mesh.py  test_metrics.py  test_quadrature.py  test_trainer.py
unipinn/: __init__.py
unipinn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
unipinn/config/: __init__.py  base.py  loader.py  poisson1d.py  poisson2d.py
unipinn/core/: __init__.py  trainer.py
unipinn/core/callbacks/: __init__.py  loggers.py  modifiers.py
unipinn/geometry/: __init__.py  generation.py  quality.py  types.py
unipinn/geometry/io/: __init__.py  abaqus_io.py  gmsh_io.py  mesh_format.py  vtk_io.py
unipinn/io/: __init__.py  artifacts.py  console.py  workspace.py
unipinn/metrics/: __init__.py  callbacks.py  errors.py  landscape.py  spectra.py
unipinn/nn/: __init__.py  activations.py  architectures.py
unipinn/pde/: __init__.py  loss.py
unipinn/pde/benchmarks/: __init__.py  base.py  poisson1d.py  poisson2d.py
unipinn/utils/: __init__.py  tensor.py
